--- a/README.Rmd
+++ b/README.Rmd
@@ -6,13 +6,14 @@ editor_options:
 ---
 
 <!-- README.md is generated from README.Rmd. Please edit that file -->
+
+<!-- badges: start -->
 [![CRAN Status](https://www.r-pkg.org/badges/version/GillespieSSA2)](https://cran.r-project.org/package=GillespieSSA2)
 [![CRAN Downloads](https://cranlogs.r-pkg.org/badges/GillespieSSA2)](https://cran.r-project.org/package=GillespieSSA2)
 ![R-CMD-check](https://github.com/rcannood/GillespieSSA2/workflows/R-CMD-check/badge.svg)
 [![DOI](https://img.shields.io/badge/doi-10.1101/2020.02.06.936971-green)](https://doi.org/10.1101/2020.02.06.936971)
 [![Coverage Status](https://codecov.io/gh/rcannood/GillespieSSA2/branch/master/graph/badge.svg)](https://codecov.io/gh/rcannood/GillespieSSA2?branch=master)
-
-
+<!-- badges: end -->
 
 # `GillespieSSA2`: Gillespie's Stochastic Simulation Algorithm for impatient people.
 
