--- a/README.Rmd
+++ b/README.Rmd
@@ -3,6 +3,7 @@ output:
   github_document
 editor_options: 
   chunk_output_type: console
+bibliography: vignettes/library.bib
 ---
 
 <!-- README.md is generated from README.Rmd. Please edit that file -->
@@ -11,7 +12,7 @@ editor_options:
 [![CRAN Status](https://www.r-pkg.org/badges/version/GillespieSSA2)](https://cran.r-project.org/package=GillespieSSA2)
 [![CRAN Downloads](https://cranlogs.r-pkg.org/badges/GillespieSSA2)](https://cran.r-project.org/package=GillespieSSA2)
 ![R-CMD-check](https://github.com/rcannood/GillespieSSA2/workflows/R-CMD-check/badge.svg)
-[![DOI](https://img.shields.io/badge/doi-10.1101/2020.02.06.936971-green)](https://doi.org/10.1101/2020.02.06.936971)
+[![DOI](https://img.shields.io/badge/doi-10.1038/s41467-021-24152-2-green)](https://doi.org/10.1038/s41467-021-24152-2)
 [![Coverage Status](https://app.codecov.io/gh/rcannood/GillespieSSA2/branch/master/graph/badge.svg)](https://app.codecov.io/gh/rcannood/GillespieSSA2?branch=master)
 <!-- badges: end -->
 
@@ -32,8 +33,8 @@ library(tidyverse)
 ```
 
 **GillespieSSA2** is a fast, scalable, and versatile framework for simulating large systems with 
-Gillespie's Stochastic Simulation Algorithm (SSA). This package is the spiritual successor to 
-the GillespieSSA package originally written by Mario Pineda-Krch. 
+Gillespie's Stochastic Simulation Algorithm (SSA) [@Cannoodt2021]. This package is the spiritual successor to 
+the GillespieSSA package originally written by Mario Pineda-Krch [@PinedaKrch2008]. 
 
 GillespieSSA2 has the following added benefits: 
 
