--- a/inst/REFERENCES.bib
+++ b/inst/REFERENCES.bib
@@ -88,4 +88,14 @@
   year={1993},
   publisher={John Wiley \& Sons Ltd.}
 }
-
+@article{Eddelbuettel2011,
+  doi = {10.18637/jss.v040.i08},
+  url = {https://doi.org/10.18637/jss.v040.i08},
+  year = {2011},
+  publisher = {Foundation for Open Access Statistic},
+  volume = {40},
+  number = {8},
+  author = {Dirk Eddelbuettel and Romain Fran{\c{c}}ois},
+  title = {$\less$b$\greater$Rcpp$\less$/b$\greater$: Seamless$\less$i$\greater$R$\less$/i$\greater$and$\less$i$\greater$C$\mathplus$$\mathplus$$\less$/i$\greater$Integration},
+  journal = {Journal of Statistical Software}
+}
